# object_color_detector

./: CMakeLists.txt  README.md  package.xml
color_dynamic_reconfigure/: CMakeLists.txt  package.xml
color_dynamic_reconfigure/include/color_dynamic_reconfigure/: color_dynamic_reconfigure.h
color_extractor/: CMakeLists.txt  package.xml
color_extractor/include/color_extractor/: color_extractor.h
color_extractor/launch/: color_extractor.launch
color_extractor/src/: color_extractor.cpp  color_extractor_node.cpp
config/rviz/: mask_image_creator.rviz  object_color_detector.rviz
include/color_param/: color_param.h
include/mask_image_creator/: mask_image_creator.h
include/object_color_detector/: object_color_detector.h
launch/: mask_image_creator.launch  object_color_detector.launch
mask_image_creator/: CMakeLists.txt  package.xml
mask_image_creator/config/rviz/: mask_image_creator.rviz
mask_image_creator/config/rviz/roomba2/: mask_image_creator.rviz
mask_image_creator/config/rviz/roomba3/: mask_image_creator.rviz
mask_image_creator/config/rviz/roomba4/: mask_image_creator.rviz
mask_image_creator/config/rviz/roomba5/: mask_image_creator.rviz
mask_image_creator/config/rviz/roomba6/: mask_image_creator.rviz
mask_image_creator/include/mask_image_creator/: mask_image_creator.h
mask_image_creator/launch/: mask_image_creator.launch
mask_image_creator/src/: mask_image_creator.cpp  mask_image_creator_node.cpp
object_color_detector_msgs/: CMakeLists.txt  package.xml
object_color_detector_msgs/msg/: ObjectColorPosition.msg  ObjectColorPositions.msg
object_color_detector_params/: CMakeLists.txt  package.xml
object_color_detector_params/cfg/: Hsv.cfg
object_color_detector_params/config/color_param/: color_param.yaml
object_color_detector_params/config/color_params/: 20221102234257.yaml  20221102235353.yaml  color_params.yaml  new_param.yaml
object_color_detector_params/include/color_loader/: color_loader.h
object_color_detector_params/include/color_param/: color_param.h  hsv.h
object_color_detector_params/include/color_params/: color_params.h
object_color_detector_params/include/color_reconfigure/: color_reconfigure.h
object_color_detector_params/include/color_saver/: color_saver.h
point_cloud_object_color_detector/: CMakeLists.txt  package.xml
point_cloud_object_color_detector/config/rviz/: point_cloud_object_color_detector.rviz  point_cloud_object_detector.rviz
point_cloud_object_color_detector/config/rviz/roomba1/: point_cloud_object_detector.rviz
point_cloud_object_color_detector/config/rviz/roomba2/: point_cloud_object_detector.rviz
point_cloud_object_color_detector/config/rviz/roomba3/: point_cloud_object_detector.rviz
point_cloud_object_color_detector/config/rviz/roomba4/: point_cloud_object_detector.rviz
point_cloud_object_color_detector/config/rviz/roomba5/: point_cloud_object_detector.rviz
point_cloud_object_color_detector/config/rviz/roomba6/: point_cloud_object_detector.rviz
point_cloud_object_color_detector/config/target_objects/: target_objects.yaml
point_cloud_object_color_detector/include/point_cloud_object_color_detector/: point_cloud_object_color_detector.h
point_cloud_object_color_detector/include/point_cloud_object_detector/: point_cloud_object_detector.h
point_cloud_object_color_detector/include/target_objects/: target_objects.h
point_cloud_object_color_detector/launch/: point_cloud_object_color_detector.launch  point_cloud_object_detector.launch
point_cloud_object_color_detector/src/: :q  point_cloud_object_color_detector.cpp  point_cloud_object_color_detector_node.cpp  point_cloud_object_detector.cpp  point_cloud_object_detector_node.cpp
src/: mask_image_creator.cpp  mask_image_creator_node.cpp  object_color_detector.cpp  object_color_detector_node.cpp
