<?xml version="1.0"?>
<package format="2">
  <name>object_color_detector</name>
  <version>0.0.0</version>
  <description>The object_color_detector package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>darknet_ros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>object_detector_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
  </export>
</package>
