<?xml version="1.0"?>
<package format="2">
  <name>color_dynamic_reconfigure</name>
  <version>0.0.0</version>
  <description>The color_dynamic_reconfigure package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>object_color_detector_params</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
