<?xml version="1.0"?>
<package format="2">
  <name>point_cloud_object_color_detector</name>
  <version>0.0.0</version>
  <description>The point_cloud_object_color_detector package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>object_color_detector_params</depend>
  <depend>object_detector_msgs</depend>
  <depend>object_color_detector_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
